--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description"
+          content="Homepage for the original chapter of Chi Sigma at Northeastern University Boston Massachusetts">
     <meta name="author" content="">
 
     <title>Chi Sigma->Est.2014</title>
@@ -21,7 +22,7 @@
     <link href="font-awesome-4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -93,9 +94,14 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Grayscale</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
+                <h2>About XΣ</h2>
+                <!--History-->
+                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+                
+                <!--Co-ed-->
+                <p>This theme features stock photos by. along with a custom Google Maps skin courtesy of. </p>
+                
+                <!--What we do-->
                 <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
             </div>
         </div>
@@ -106,9 +112,9 @@
         <div class="members-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                    <h2>Meet the Members</h2>
+                    <p>Discover Chi Sigma members in your area</p>
+                    <a href="pages/members.html" class="btn btn-default btn-lg">Members' Bios</a>
                 </div>
             </div>
         </div>
@@ -119,9 +125,10 @@
         <div class="events-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                    <h2>Upcoming Events</h2>
+                    <p>Find out the times and locations of Chi Sigma Rush and Chapter events.
+                        <br>Attendance is open to anyone who is interested.</p>
+                    <a href="pages/events.html" class="btn btn-default btn-lg">View Event Calendar</a>
                 </div>
             </div>
         </div>
@@ -131,9 +138,9 @@
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
+                <h2>Contact Chi Sigma</h2>
+                <p>Feel free to email us with questions, suggestions, feedback on events, or to just say hello!</p>
+                <p><a href="mailto:info@chisigma.co">info@chisigma.co</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
@@ -152,9 +159,6 @@
 
     <!-- Footer -->
     <footer>
-        <div class="container text-center">
-            <p>Copyright &copy; Your Website 2014</p>
-        </div>
     </footer>
 
     <!-- jQuery -->
