HTML and CSS for Members and Events
Finished the HTML and CSS basics for Members and Events Pages

--- a/pages/events.html
+++ b/pages/events.html
@@ -77,14 +77,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Events XΣ</h2>
-                <!--History-->
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                
-                <!--Co-ed-->
-                <p>This theme features stock photos by. along with a custom Google Maps skin courtesy of. </p>
-                
-                <!--What we do-->
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+<div style="opacity: .9;" id="upto-calendar-container-zPOO" class="upto-calendar-plugin"><script>!function(c,b,a){function d(h){var e=document.getElementById("upto-calendar-container-"+c),f=document.createElement("SCRIPT"),g="	http://upto.com/js/plugin.js";f.onreadystatechange=function(){if(f.readyState==="loaded"||f.readyState==="complete"){f.onreadystatechange=null;h()}};f.onload=function(){h()};f.setAttribute("src",g);e.parentNode.insertBefore(f,e)}d(function(){upto.init(c)})}("zPOO");</script></div>
             </div>
         </div>
     </section>
