--- a/pages/members.html
+++ b/pages/members.html
@@ -76,7 +76,7 @@
     <section id="members" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-10 col-lg-offset-1">
-                <h2>Members XΣ</h2>
+                <h2>XΣ Members</h2>
                 <!--Start CHI SIG MEMBER-->
                 <div class="chi-sig-member clearfix">
                     <img class="chi-sig-member-image" src="../img/profiles/lerner.jpg">
