Updated About Us
Added in HTML for about us sections

--- a/index.html
+++ b/index.html
@@ -96,13 +96,11 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About XΣ</h2>
                 <!--History-->
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                
-                <!--Co-ed-->
-                <p>This theme features stock photos by. along with a custom Google Maps skin courtesy of. </p>
-                
-                <!--What we do-->
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <p>	Founded by a group of like-minded individuals simply looking for a new way to experience Greek life, Chi Sigma represents the potential of what humans can do.  
+                    By centering our philosophy on enjoyment, productivity, creativity, and respect, members are encouraged to follow their passions while expanding their outlook on the life that surrounds them.</p>
+
+                    <p>Chi Sigma’s primary objective is to merely enhance the lives of all its members and all those we work with.  The perfection in simplicity is so often overlooked, and we’re here to unearth it.</p>
+            <a href="pages/about.html" class="btn btn-default btn-lg">Learn More</a>
             </div>
         </div>
     </section>
