--- a/pages/about.html
+++ b/pages/about.html
@@ -78,13 +78,11 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About XΣ</h2>
                 <!--History-->
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                
-                <!--Co-ed-->
-                <p>This theme features stock photos by. along with a custom Google Maps skin courtesy of. </p>
-                
-                <!--What we do-->
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+<p>     It is quite evident that Chi Sigma is not a Greek society laced with tradition, strengthened by its history of great achievements.  Chi Sigma is also not (yet) one of large standing, with its presence carved into the existence of universities across the country.  Nonetheless, these statements are precisely why Chi Sigma is the organization that it is.  Chi Sigma is unique, innovative, and growing.</p>
+
+	<p>    Founded by a group of five students at Northeastern University, it began as nothing more than an idea.  An idea of a society that promoted academic prowess, excellence in all areas outside of the classroom, and above all, the support of one another.  Chi Sigma’s primary ambition would be to represent the acceptance and encouragement of all those interested in joining, male or female, regardless of their field of study.  In simpler terms, Chi Sigma’s goal is to embody the Greek word parea – a group of friends who regularly meet with the intent of enriching the quality of their lives that is all to brief in time.  This is why Chi Sigma is founded upon the pillars of truth, loyalty, freedom, creativity and enjoyment.  By eliminating the commonly onerous traditions of typical fraternities and sororities, Chi Sigma is able to provide a purely beneficial experience to all who participate.</p>
+
+	<p>    In short, Chi Sigma is a collection of individuals seeking to better their college experience by participating in this network of scholars, thinkers, athletes, music-enthusiasts, artists, programmers, etc.  Ultimately, Chi Sigma exists as common ground between students of all interests, allowing individuals to expand their knowledge and build relationships with students they never would have encountered otherwise, creating a truly unique experience for each member. </p>
             </div>
         </div>
     </section>
