--- a/pages/events.html
+++ b/pages/events.html
@@ -77,7 +77,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>XΣ Events</h2>
-<div id="upto-calendar-container-zPOO" class="upto-calendar-plugin"><script>!function(c,b,a){function d(h){var e=document.getElementById("upto-calendar-container-"+c),f=document.createElement("SCRIPT"),g="	http://upto.com/js/plugin.js";f.onreadystatechange=function(){if(f.readyState==="loaded"||f.readyState==="complete"){f.onreadystatechange=null;h()}};f.onload=function(){h()};f.setAttribute("src",g);e.parentNode.insertBefore(f,e)}d(function(){upto.init(c)})}("zPOO");</script></div>
+<div id="upto-calendar-container-zPOO" class="upto-calendar-plugin" style="opacity: .9;"><script>!function(c,b,a){function d(h){var e=document.getElementById("upto-calendar-container-"+c),f=document.createElement("SCRIPT"),g="	http://upto.com/js/plugin.js";f.onreadystatechange=function(){if(f.readyState==="loaded"||f.readyState==="complete"){f.onreadystatechange=null;h()}};f.onload=function(){h()};f.setAttribute("src",g);e.parentNode.insertBefore(f,e)}d(function(){upto.init(c)})}("zPOO");</script></div>
             </div>
         </div>
     </section>
