Fixed live-page bug
Current page box would flicker as the user scrolled

--- a/pages/about.html
+++ b/pages/about.html
@@ -53,8 +53,8 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <li>
-                        <a class="page-scroll live-page" href="#about">About</a>
+                    <li class="live-page">
+                        <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="members.html">Members</a>
