--- a/pages/events.html
+++ b/pages/events.html
@@ -59,8 +59,8 @@
                     <li>
                         <a class="page-scroll" href="members.html">Members</a>
                     </li>
-                    <li>
-                        <a class="page-scroll live-page" href="#events">Events</a>
+                    <li class="live-page">
+                        <a class="page-scroll" href="#events">Events</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="../index.html#contact">Contact</a>
