--- a/pages/members.html
+++ b/pages/members.html
@@ -56,8 +56,8 @@
                     <li>
                         <a class="page-scroll" href="about.html">About</a>
                     </li>
-                    <li>
-                        <a class="page-scroll live-page" href="#members">Members</a>
+                    <li class="live-page">
+                        <a class="page-scroll" href="#members">Members</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="events.html">Events</a>
