Updated Profiles and removed Contact buttons for now.
**Members are displayed block right now - may want to fix

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <p>Feel free to email us with questions, suggestions, feedback on events, or to just say hello!</p>
                 <p><a href="mailto:info@chisigma.co">info@chisigma.co</a>
                 </p>
-                <ul class="list-inline banner-social-buttons">
+               <!-- <ul class="list-inline banner-social-buttons">
                     <li>
                         <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                     </li>
@@ -150,7 +150,7 @@
                     <li>
                         <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
                     </li>
-                </ul>
+                </ul> -->
             </div>
         </div>
     </section>
