--- a/pages/members.html
+++ b/pages/members.html
@@ -121,7 +121,7 @@
                     <h4>Jonathan Northcott<span><h6>Founder</h6></span></h4>
                         <!-- BIO -->
                         <p>
-                           I am a Combined Computer Science and Business Administration major from the small, rural town of Hollis, New Hampshire. At school, I attend Northeastern University in Boston, Massachusetts.<br>Currently, I am the Chief Technical Officer of N/U Disk Jockey Services and the Co-Founder of The Ricard Company which designs and produces digital tools for law enforcement agencies.
+                           I am a Combined Computer Science and Business Administration major from the small, rural town of Hollis, New Hampshire. I am currently attending Northeastern University in Boston, Massachusetts.<br>Currently, I am the Chief Technical Officer of N/U Disk Jockey Services and the Co-Founder of The Ricard Company which designs and produces digital tools for law enforcement agencies.
                         </p>
                     </div></div>
                 <!--End CHI SIG MEMBER-->
