--- a/pages/members.html
+++ b/pages/members.html
@@ -149,6 +149,18 @@
                         </p>
                     </div></div>
                 <!--End CHI SIG MEMBER-->
+                 <!--Start CHI SIG MEMBER-->
+                <div class="chi-sig-member clearfix">
+                    <img class="chi-sig-member-image" src="../img/profiles/coghlan-t.jpg">
+                    <div class="chi-sig-member-info col-lg-10 col-lg-offset-0">
+                        
+                    <h4>Ty Choghlan<span><h6>Alpha</h6></span></h4>
+                        <!-- BIO -->
+                        <p>
+                            Ty is unique in the fact that he passed his introductory computer science class here at Northeastern University. His friends know him for the quality of his puns, and while living in his lofty residence hall he has earned the nickname Ernest Hemenway because of them. His extracurriculars are quite dramatic, and he is extremely fond of PhD's and tennis.  In his free time he works as a tutor for the university, and is always willing to school you.
+                        </p>
+                    </div></div>
+                <!--End CHI SIG MEMBER-->
             </div>
         </div>
     </section>
