--- a/pages/members.html
+++ b/pages/members.html
@@ -142,7 +142,7 @@
                     <img class="chi-sig-member-image" src="../img/profiles/foreman-e.jpg">
                     <div class="chi-sig-member-info col-lg-10 col-lg-offset-0">
                         
-                    <h4>Elijah Foreman<span><h6>Alpha</h6></span></h4>
+                    <h4>Elijah Foreman<span><h6>"Founder"</h6></span></h4>
                         <!-- BIO -->
                         <p>
                             President of Diversity, Event Coordinator and Caribbean ambassador. Pursuing a dual degree at Northeastern University in Computer science and cognitive psychology with a minor in modern art. Hobbies include taking and critiquing selfies and cats.
