--- a/pages/members.html
+++ b/pages/members.html
@@ -90,7 +90,7 @@
         <div>
             <div class="card-col">
                 <div class="flex-container mdl-card mdl-shadow--2dp">
-                    <div class="dummy-image mdl-card__title mdl-card--expand">
+                    <div class="alex mdl-card__title mdl-card--expand">
                         <h2 class="mdl-card__title-text">Alex</h2> </div>
                     <div class="mdl-card__content">
                         <div class="mdl-card__supporting-text"> In the attempt to keep this short, I'm a renaissance man at my best. With interests spanning from philosophy and writing to mountain biking and photography,  I'm an dreamer at heart.  In the past, I've worked as a cashier and dishwasher at a local market, channeled my inner child (or adult, as some may argue) as a YMCA summer camp counselor, and interned at a small architecture firm.  Also, I am from Southern Connecticut, currently studying Computer Science at Northeastern University, and always looking for the next thing to explore. </div>
@@ -98,7 +98,7 @@
                     </div>
                 </div>
                 <div class="flex-container mdl-card mdl-shadow--2dp">
-                    <div class="dummy-image mdl-card__title mdl-card--expand">
+                    <div class="zach mdl-card__title mdl-card--expand">
                         <h2 class="mdl-card__title-text">Zach</h2> </div>
                     <div class="mdl-card__content">
                         <div class="mdl-card__supporting-text"> A jovial and strapping young lad who helped found this great organization. He has many little known talents, such as being an expert masseuse. Currently, he is a player on the club Ultimate Frisbee team at Northeastern University and is pursuing a major in Russian art history. </div>
@@ -106,7 +106,7 @@
                     </div>
                 </div>
                 <div class="flex-container mdl-card mdl-shadow--2dp">
-                    <div class="dummy-image mdl-card__title mdl-card--expand">
+                    <div class="rag mdl-card__title mdl-card--expand">
                         <h2 class="mdl-card__title-text">Raj</h2> </div>
                     <div class="mdl-card__content">
                         <div class="mdl-card__supporting-text"> President of Management, Communications Design, and South Asian relations. Pursuing a dual degree at Northeastern University for International Business and Computer Science, with a potential minor in Mongolian Art and Culture. Also known as renowned triangle artist and Varsity Chess athlete. </div>
@@ -114,7 +114,7 @@
                     </div>
                 </div>
                 <div class="flex-container mdl-card mdl-shadow--2dp">
-                    <div class="dummy-image mdl-card__title mdl-card--expand">
+                    <div class="jon mdl-card__title mdl-card--expand">
                         <h2 class="mdl-card__title-text">Jon</h2> </div>
                     <div class="mdl-card__content">
                         <div class="mdl-card__supporting-text"> I am a Combined Computer Science and Business Administration major from the small, rural town of Hollis, New Hampshire. I am currently attending Northeastern University in Boston, Massachusetts.<br>Currently, I am the Chief Technical Officer of N/U Disk Jockey Services and the Co-Founder of The Ricard Company which designs and produces digital tools for law enforcement agencies. </div>
@@ -122,7 +122,7 @@
                     </div>
                 </div>
                 <div class="flex-container mdl-card mdl-shadow--2dp">
-                    <div class="dummy-image mdl-card__title mdl-card--expand">
+                    <div class="dan mdl-card__title mdl-card--expand">
                         <h2 class="mdl-card__title-text">Dan</h2> </div>
                     <div class="mdl-card__content">
                         <div class="mdl-card__supporting-text"> Public relations specialist attending Northeastern University to pursue a degree in Environmental Geology with a minor in Compsci. Back in highschool he was drumline captain and head robotic programmer. </div>
@@ -130,7 +130,7 @@
                     </div>
                 </div>
                 <div class="flex-container mdl-card mdl-shadow--2dp">
-                    <div class="dummy-image mdl-card__title mdl-card--expand">
+                    <div class="eli mdl-card__title mdl-card--expand">
                         <h2 class="mdl-card__title-text">Eli</h2> </div>
                     <div class="mdl-card__content">
                         <div class="mdl-card__supporting-text"> President of Diversity, Event Coordinator and Caribbean ambassador. Pursuing a dual degree at Northeastern University in Computer science and cognitive psychology with a minor in modern art. Hobbies include taking and critiquing selfies and cats. </div>
@@ -138,7 +138,7 @@
                     </div>
                 </div>
                 <div class="flex-container mdl-card mdl-shadow--2dp">
-                    <div class="dummy-image mdl-card__title mdl-card--expand">
+                    <div class="ty mdl-card__title mdl-card--expand">
                         <h2 class="mdl-card__title-text">Ty</h2> </div>
                     <div class="mdl-card__content">
                         <div class="mdl-card__supporting-text"> Ty is unique in the fact that he passed his introductory computer science class here at Northeastern University. His friends know him for the quality of his puns, and while living in his lofty residence hall he has earned the nickname Ernest Hemenway because of them. His extracurriculars are quite dramatic, and he is extremely fond of PhD's and tennis.  In his free time he works as a tutor for the university, and is always willing to school you. </div>
