about page update
kinda sloppy, needs stylesheet refactoring (ew)

--- a/pages/about.html
+++ b/pages/about.html
@@ -17,6 +17,7 @@
 
     <!-- Custom CSS -->
     <link href="../css/grayscale.css" rel="stylesheet">
+    <link href="../css/pages.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="../font-awesome-4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -32,7 +33,7 @@
 
 </head>
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+<body class="about-page" id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
     <!-- Navigation -->
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
@@ -76,7 +77,7 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About XΣ</h2>
+                <h2>About XΣ.</h2>
                 <!--History-->
 <p>     It is quite evident that Chi Sigma is not a Greek society laced with tradition, strengthened by its history of great achievements.  Chi Sigma is also not (yet) one of large standing, with its presence carved into the existence of universities across the country.  Nonetheless, these statements are precisely why Chi Sigma is the organization that it is.  Chi Sigma is unique, innovative, and growing.</p>
 
