more work on index page

--- a/index.html
+++ b/index.html
@@ -297,20 +297,22 @@
     </section>
     
     <!-- About Section -->
-    <section id="about" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>About XΣ</h2>
-                <!--History-->
-                <p>	Founded by a group of like-minded individuals simply looking for a new way to experience Greek life, Chi Sigma represents the potential of what humans can do.  
-                    By centering our philosophy on enjoyment, productivity, creativity, and respect, members are encouraged to follow their passions while expanding their outlook on the life that surrounds them.</p>
+    <div class="index-about-wrapper">
+        <section id="about" class="container content-section text-center index-about">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h2>About XΣ</h2>
+                    <!--History-->
+                    <p>	Founded by a group of like-minded individuals simply looking for a new way to experience Greek life, Chi Sigma represents the potential of what humans can do.  
+                        By centering our philosophy on enjoyment, productivity, creativity, and respect, members are encouraged to follow their passions while expanding their outlook on the life that surrounds them.</p>
 
-                    <p>Chi Sigma’s primary objective is to merely enhance the lives of all its members and all those we work with.  The perfection in simplicity is so often overlooked, and we’re here to unearth it.</p>
-            <a href="pages/about.html" class="btn btn-default btn-lg">Learn More</a>
+                        <p>Chi Sigma’s primary objective is to merely enhance the lives of all its members and all those we work with.  The perfection in simplicity is so often overlooked, and we’re here to unearth it.</p>
+                <a href="pages/about.html" class="btn btn-default btn-lg">Learn More</a>
+                </div>
             </div>
-        </div>
-    </section>
-
+        </section>
+    </div>
+    
     <!-- Members Section -->
     <section id="members" class="content-section text-center">
         <div class="members-section">
