major updates; new footer, index design, navbar and footer on other pages

--- a/pages/about.html
+++ b/pages/about.html
@@ -96,6 +96,34 @@
 
     <!-- Footer -->
     <footer>
+        <div class="row">
+            <div class="footer col-2">
+                <div class="footer-icon"></div>
+            </div>
+            <div class="footer col-8">
+                <div class="row">
+                    <div class="col-3">
+                        <ul>
+                            <li><h4>Pages</h4></li>
+                            <li><a href="pages/about.html">About</a></li>
+                            <li><a href="pages/members.html">Members</a></li>
+                            <li><a href="pages/events.html">Events</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-3">
+                        <ul>
+                            <li><h4>Contact</h4></li>
+                            <li><a href="mailto:info@chisigma.co">Email</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <p class="copyright">Copyright Chi Sigma, 2017</p>
+            </div>
+        </div>
     </footer>
 
     <!-- jQuery -->
