--- a/pages/about.html
+++ b/pages/about.html
@@ -77,7 +77,7 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About XΣ.</h2>
+                <h2 class="subheader">About XΣ.</h2>
                 <!--History-->
                 <div class="content">
                     <p>     It is quite evident that Chi Sigma is not a Greek society laced with tradition, strengthened by its history of great achievements.  Chi Sigma is also not (yet) one of large standing, with its presence carved into the existence of universities across the country.  Nonetheless, these statements are precisely why Chi Sigma is the organization that it is.  Chi Sigma is unique, innovative, and growing.</p>
@@ -96,24 +96,26 @@
 
     <!-- Footer -->
     <footer>
-        <div class="row">
+        <div class="row height-fix">
             <div class="footer col-2">
-                <div class="footer-icon"></div>
+                <a href="../index.html"><div class="footer-icon"></div></a>
             </div>
             <div class="footer col-8">
                 <div class="row">
                     <div class="col-3">
                         <ul>
                             <li><h4>Pages</h4></li>
-                            <li><a href="pages/about.html">About</a></li>
-                            <li><a href="pages/members.html">Members</a></li>
-                            <li><a href="pages/events.html">Events</a></li>
+                            <li><a href="#page-top">About</a></li>
+                            <li><a href="../pages/members.html">Members</a></li>
+                            <li><a href="../pages/events.html">Events</a></li>
                         </ul>
                     </div>
                     <div class="col-3">
                         <ul>
                             <li><h4>Contact</h4></li>
                             <li><a href="mailto:info@chisigma.co">Email</a></li>
+                            <li><a href="https://www.facebook.com/chisigma" target="_blank">Facebook</a></li>
+                            <li><a href="https://twitter.com/chisigma_neu" target="_blank">Twitter</a></li>
                         </ul>
                     </div>
                 </div>
@@ -124,6 +126,7 @@
                 <p class="copyright">Copyright Chi Sigma, 2017</p>
             </div>
         </div>
+        <div class="clearfix"></div>
     </footer>
 
     <!-- jQuery -->
