--- a/pages/events.html
+++ b/pages/events.html
@@ -17,6 +17,7 @@
 
     <!-- Custom CSS -->
     <link href="../css/grayscale.css" rel="stylesheet">
+    <link href="../css/pages.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="../font-awesome-4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -32,7 +33,7 @@
 
 </head>
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" class="events-page">
 
 <!-- Navigation -->
 <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
@@ -73,35 +74,43 @@
 </nav>
 
 <!-- Event Page -->
-<section id="events" class="container content-section text-center">
-    <div class="row">
-        <div class="col-lg-8 col-lg-offset-2">
-            <h2>XΣ Events</h2>
-            <div id="upto-calendar-container-zPOO" class="upto-calendar-plugin" style="opacity: .9;"><script>!function(c,b,a){function d(h){var e=document.getElementById("upto-calendar-container-"+c),f=document.createElement("SCRIPT"),g="	http://upto.com/js/plugin.js";f.onreadystatechange=function(){if(f.readyState==="loaded"||f.readyState==="complete"){f.onreadystatechange=null;h()}};f.onload=function(){h()};f.setAttribute("src",g);e.parentNode.insertBefore(f,e)}d(function(){upto.init(c)})}("zPOO");</script></div>
+<div class="events-wrapper">
+    <section id="events" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2 class="subheader">OUR <span>EVENTS.</span></h2>
+            </div>
         </div>
-    </div>
-</section>
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <div id="upto-calendar-container-zPOO" class="upto-calendar-plugin" style="opacity: .9;"><script>!function(c,b,a){function d(h){var e=document.getElementById("upto-calendar-container-"+c),f=document.createElement("SCRIPT"),g="	http://upto.com/js/plugin.js";f.onreadystatechange=function(){if(f.readyState==="loaded"||f.readyState==="complete"){f.onreadystatechange=null;h()}};f.onload=function(){h()};f.setAttribute("src",g);e.parentNode.insertBefore(f,e)}d(function(){upto.init(c)})}("zPOO");</script></div>
+            </div>
+        </div>
+    </section>
+</div>
 
 <!-- Footer -->
 <footer>
-    <div class="row">
+    <div class="row height-fix">
         <div class="footer col-2">
-            <div class="footer-icon"></div>
+            <a href="../index.html"><div class="footer-icon"></div></a>
         </div>
         <div class="footer col-8">
             <div class="row">
                 <div class="col-3">
                     <ul>
                         <li><h4>Pages</h4></li>
-                        <li><a href="pages/about.html">About</a></li>
-                        <li><a href="pages/members.html">Members</a></li>
-                        <li><a href="pages/events.html">Events</a></li>
+                        <li><a href="../pages/about.html">About</a></li>
+                        <li><a href="../pages/members.html">Members</a></li>
+                        <li><a href="#page-top">Events</a></li>
                     </ul>
                 </div>
                 <div class="col-3">
                     <ul>
                         <li><h4>Contact</h4></li>
                         <li><a href="mailto:info@chisigma.co">Email</a></li>
+                        <li><a href="https://www.facebook.com/chisigma" target="_blank">Facebook</a></li>
+                        <li><a href="https://twitter.com/chisigma_neu" target="_blank">Twitter</a></li>
                     </ul>
                 </div>
             </div>
@@ -112,6 +121,7 @@
             <p class="copyright">Copyright Chi Sigma, 2017</p>
         </div>
     </div>
+    <div class="clearfix"></div>
 </footer>
 
 <!-- jQuery -->
