navbar fixes (padding, hrefs)

--- a/pages/members.html
+++ b/pages/members.html
@@ -55,10 +55,10 @@
                     <a href="#page-top"></a>
                 </li>
                 <li class="live-page">
-                    <a class="page-scroll" href="#about">About</a>
+                    <a class="page-scroll" href="about.html">About</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="members.html">Members</a>
+                    <a class="page-scroll" href="#members">Members</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="events.html">Events</a>
