--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#members">Members</a>
+                        <a class="page-scroll" href="#index-members">Members</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#events">Events</a>
